# memorybridge

./: .gitignore  README.md  index.html  mcq-god-privacy-policy.html  package-lock.json  package.json
.github/workflows/: deploy.yml
processor/: README.md  pyproject.toml
processor/src/memorybridge_export/: __init__.py  android.py  cli.py  metadata.py  parser.py  processor.py  zip_ingest.py
processor/tests/: test_parser.py  test_zip_ingest.py
src/: App.jsx  styles.css
